# resugen

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  resume-vg.example.yml  resume.sample.yml  resume.yml
resugen/: main.py
template/: ginseng-vg.html  ginseng.css  ginseng.html  minimal.css  minimal.html
