[tool.poetry]
name = "resugen"
version = "0.1.0"
description = "Generate a resume from a yaml file."
authors = ["Matteo Silvestro <matteosilvestro@live.it>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.6"
PyYAML = "^6.0.3"
watchdog = "^6.0.0"
Markdown = "^3.10.1"
python-dotenv = "^1.2.1"

[tool.poetry.scripts]
generate = "resugen.main:generate"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
